--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <div class="px-4 pt-16 pb-36 max-w-xl mx-auto md:px-6 lg:max-w-7xl lg:py-24">
   <h2 class="text-3xl font-medium font-cursive text-left text-gray-800 tracking-tight lg:text-4xl">Journal</h2>
-  <p class="pt-2 text-sm text-gray-500 max-w-md xl:text-base">Si vous souhaitez en apprendre plus, voici quelques articles sur la céramique que j'ai écris !</p>
+  <p class="pt-2 text-sm text-gray-500 max-w-md xl:text-base">Si vous souhaitez en apprendre plus, voici quelques articles sur la céramique que j'ai écrits !</p>
 
   <div class="pt-12 flex flex-col space-y-4 lg:space-y-0 lg:space-x-4 lg:flex-row lg:relative">
     <% @articles.each do |article| %>
