--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,7 @@
   <div class="py-16 lg:py-24 max-w-7xl mx-auto">
     <div class="px-4 md:px-6">
       <h2 class="text-3xl font-medium font-cursive text-left text-gray-800 tracking-tight lg:text-4xl">Mes créations du moment</h2>
-      <p class="pt-2 text-sm text-gray-500 max-w-md xl:text-base">Explorez ma séléction personnelle d'objet que j'ai réalisée à la main dans mon ateliers. Des objets du quotidiens, décoratifs, pour votre intérieur ou votre aquarium, il y en a pour tous les goûts.</p>
+      <p class="pt-2 text-sm text-gray-500 max-w-md xl:text-base">Explorez ma sélection personnelle d'objets que j'ai réalisés à la main dans mon atelier. Des objets du quotidien, décoratifs, pour votre intérieur ou votre aquarium, il y en a pour tous les goûts.</p>
     </div>
 
 
