--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -35,7 +35,7 @@
                         <% end %>
                       </div>
                       <span class="pt-4 text-gray-500 text-sm">Envoyé le : <span class="text-gray-700 font-bold"><%= order.updated_at.strftime("%d/%m/%Y") %></span> </span>
-                      <span class="pt-2 text-gray-500 text-sm"> Numéro de suivis : <span class="text-gray-700 font-bold"><%= order.tracking_number %></span> </span>
+                      <span class="pt-2 text-gray-500 text-sm"> Numéro de suivi : <span class="text-gray-700 font-bold"><%= order.tracking_number %></span> </span>
                     </div>
                   <% end %>
                 <% end %>
