--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -65,11 +65,11 @@
             </li>
 
             <li>
-              <%= link_to "Conditions de ventes", terms_path, class:'text-base text-gray-300 hover:text-white' %>
+              <%= link_to "Conditions de vente", terms_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
 
             <li>
-              <button class="text-base text-gray-300 hover:text-white focus:outline-none" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</button>
+              <button class="text-base text-gray-300 hover:text-white focus:outline-none" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférences de cookies</button>
             </li>
 
             <li>
