--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -13,7 +13,7 @@
             <span class="text-2xl text-gray-800 font-medium"><%= pluralize(cart_count_over_one, 'article') %> dans votre panier</span>
           </div>
           <div class="order-3 lg:order-2 lg:pt-4 pb-2 lg:border-b lg:border-gray-300">
-            <span class="text-gray-600 text-xs lg:text-sm">Livraison GRATUITE, aucun frais supplémentaires</span>
+            <span class="text-gray-600 text-xs lg:text-sm">Livraison GRATUITE, aucun frais supplémentaire</span>
           </div>
           <div class="pt-6 order-2 lg:order-3 flex justify-between lg:pt-2">
             <span class="font-bold text-gray-800 xl:text-lg">Total (<%= pluralize(cart_count_over_one, 'article') %>)</span>
