--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -69,7 +69,7 @@
       <%#= render "devise/shared/links" %>
       <div class="flex justify-between items-center">
         <svg class="w-20 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
-        <span class="text-sm text-center text-gray-700">Déjà inscris ?</span>
+        <span class="text-sm text-center text-gray-700">Déjà inscrit ?</span>
         <svg class="w-20 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
       </div>
       <div class="flex justify-center">
