--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <div class="h-1/2 lg:h-full relative z-10">
         <div class="absolute top-1/4 inset-x-0 lg:top-1/3 lg:flex lg:flex-col">
           <div class="px-4 text-center lg:text-left">
-            <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramique <br> fait main</h1>
+            <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramique <br> faits main</h1>
           </div>
           <div class="pt-6 flex justify-center lg:justify-start px-4 lg:pt-16">
             <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-full tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none transition duration-500 ease-in-out lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
